--- a/miaosha10/src/main/resources/static/pages/goods_detail.htm
+++ b/miaosha10/src/main/resources/static/pages/goods_detail.htm
@@ -55,7 +55,16 @@
                             &lt;!&ndash; 隐藏的请求参数 &ndash;&gt;
                             <input type="hidden" name="goodsId" id="goodsId"/>
                         </form>-->
-                        <button class="btn btn-primary btn-block" type="submit" id="buyButton" onclick="doMiaosha()">立即秒杀</button>
+                        <div class="row">
+                            <div class="form-inline">
+                                <!-- 添加验证码 -->
+                                <img id="verifyCodeImg" width="100" height="32" onclick="refreshVerifyCode()" style="display: none"/>
+                                <input id="verifyCode" type="text" class="form-control" style="display: none">
+                                <!--<button class="btn btn-primary btn-block" type="submit" id="buyButton" onclick="doMiaosha()">立即秒杀</button>-->
+                                <button class="btn btn-primary" type="button" id="buyButton" onclick="getMiaoshaPath()">立即秒杀
+                                </button>
+                            </div>
+                        </div>
                         <!-- 隐藏的请求参数 -->
                         <input type="hidden" name="goodsId" id="goodsId"/>
                     </td>
@@ -81,6 +90,25 @@
             // countDown();
             getDetails();
         });
+
+        // 发送 ajax 请求 获取秒杀路径
+        function getMiaoshaPath() {
+            var goodsIs = $("#goodsId").val();
+            $.ajax({
+                url: "/miaosha/get/miaosha/path",
+                type: "GET",
+                data: {
+                    goodsId: goodsIs,
+                    verifyCode: $("#verifyCode").val()
+                },
+                success: function (response) {
+                    doMiaosha(response.data.path);
+                },
+                error: function () {
+                    layer.msg("客户端请求有误");
+                }
+            });
+        }
 
         // 发送 ajax 请求 获取数据
         function getDetails() {
@@ -151,6 +179,11 @@
             countDown();
         }
 
+        // 刷新验证码
+        function refreshVerifyCode() {
+            $("#verifyCodeImg").attr("src", "/miaosha/get/verifyCode?goodsId=" + $("#goodsId").val() + "&timestamp=" + new Date().getTime());
+        }
+
         // 倒计时
         function countDown() {
             var remainSeconds = $("#remainSeconds").val();
@@ -165,27 +198,37 @@
                     $("#remainSeconds").val(remainSeconds - 1);
                     countDown();
                 }, 1000);
+                $("#verifyCodeImg").hide();
+                $("#verifyCode").hide();
+
             }
             // 秒杀正在进行中
             else if (remainSeconds == 0) {
+                // 显示秒杀按钮
                 $("#buyButton").attr("disabled", false);
                 // 去掉倒计时
                 if (timeOut) {
                     clearTimeout(timeOut);
                 }
-                $("#miaoshaTip").html("秒杀进行中")
+                $("#miaoshaTip").html("秒杀进行中");
+                $("#verifyCodeImg").attr("src", "/miaosha/get/verifyCode?goodsId=" + $("#goodsId").val());
+                $("#verifyCodeImg").show();
+                $("#verifyCode").show();
+
             }
             // 秒杀已经结束
             else {
                 $("#buyButton").attr("disabled", true);
                 $("#miaoshaTip").html("秒杀已经结束")
+                $("#verifyCodeImg").hide();
+                $("#verifyCode").hide();
             }
         }
 
         // 执行秒杀
-        function doMiaosha() {
+        function doMiaosha(path) {
             $.ajax({
-                url: "/miaosha/execute/miaosha",
+                url: "/miaosha/" + path + "/execute/miaosha",
                 type: "POST",
                 data: {
                     goodsId: $("#goodsId").val()
@@ -225,7 +268,7 @@
                             // 计时循环轮询
                             setTimeout(function () {
                                 getMiaoshaResult(goodsId);
-                            }, 100);
+                            }, 500);
                         } else {
                             layer.confirm("恭喜您，秒杀成功!",
                                 {btn: ["查看订单", "返回商品"]},
