1. 隐藏秒杀地址 2. 图形验证码 3. 接口限流防刷

--- a/miaosha10/src/main/resources/static/pages/goods_detail.htm
+++ b/miaosha10/src/main/resources/static/pages/goods_detail.htm
@@ -102,7 +102,11 @@
                     verifyCode: $("#verifyCode").val()
                 },
                 success: function (response) {
-                    doMiaosha(response.data.path);
+                    if (response.code == 200000) {
+                        doMiaosha(response.data.path);
+                    } else {
+                        layer.msg(response.msg);
+                    }
                 },
                 error: function () {
                     layer.msg("客户端请求有误");
